fix(security): Resolve 403 Forbidden and UnsatisfiedDependency errors
This commit addresses multiple dependency and mapping issues preventing the application from initializing and authenticating the admin user:

1.  **ProfileEntity Mapping:** Fixed the invalid mapping conflict (mixing @OneToMany, @ElementCollection, and @Column) on the role field by correctly implementing the @OneToMany relationship with ProfileRoleEntity and renaming the field to profileRoles.
2.  **CustomUserDetails:** Updated CustomUserDetails.getAuthorities() to correctly fetch roles from the new profileRoles List, resolving the 'cannot find symbol: getProfileRoles()' and ensuring proper ROLE_ADMIN authority is granted during login.
3.  **Repository/Service:** Adjusted ProfileRoleRepository.existsByRole() and the corresponding service method to match the final entity structure.
4.  **Dependencies:** Added missing java.util.List and java.util.stream.Collectors imports.