@@ -2,6 +2,7 @@ package dasturlash.uz.config.security;
 
 import dasturlash.uz.entity.ProfileEntity;
 import dasturlash.uz.entity.ProfileRoleEntity;
+import dasturlash.uz.enums.ProfileRole;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
@@ -11,24 +12,26 @@ import org.springframework.stereotype.Component;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public class CustomUserDetails implements UserDetails {
 
     @Getter
     private final ProfileEntity profileEntity;
-    private final ProfileRoleEntity profileRoleEntity;
 
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Rolni olish va uni Spring Security tushunadigan formatga (GrantedAuthority) o'tkazish
-        // Sizning yechimingizda rol ProfileRoleService orqali olinishi kerak edi.
-        // Hozircha oddiyroq qilib, faqat USER rolini qaytarib turamiz.
-        // Keyinchalik bu yerga ProfileRoleService dan haqiqiy rol kiritiladi
-        return Collections.singletonList(new SimpleGrantedAuthority(
-                profileRoleEntity.getRole().name()
-        ));
+
+        if (profileEntity.getProfileRoles() == null || profileEntity.getProfileRoles().isEmpty()) {
+            return List.of(new SimpleGrantedAuthority("ROLE_USER"));
+        }
+
+        return profileEntity.getProfileRoles().stream()
+                .map(pr -> new SimpleGrantedAuthority(pr.getRole().name()))
+                .collect(Collectors.toList());
     }
 
     @Override
